[gd_scene load_steps=4 format=3 uid="uid://bs4ao1prbv1xt"]

[ext_resource type="Script" uid="uid://coyqxlw6c1065" path="res://Gui.gd" id="1_ah776"]
[ext_resource type="Script" uid="uid://p10fw43jamvo" path="res://buttontest_1.gd" id="3_v0osr"]
[ext_resource type="Script" uid="uid://ek1wc287w6fv" path="res://buttontest_2.gd" id="4_aeu05"]

[node name="Gui" type="Node2D"]
script = ExtResource("1_ah776")

[node name="dialogue" type="RichTextLabel" parent="."]
offset_right = 250.0
offset_bottom = 150.0
bbcode_enabled = true

[node name="botton1" type="RichTextLabel" parent="."]
offset_left = -2.0
offset_top = 161.0
offset_right = 38.0
offset_bottom = 201.0
bbcode_enabled = true

[node name="botton2" type="RichTextLabel" parent="."]
offset_left = -1.0
offset_top = 211.0
offset_right = 39.0
offset_bottom = 251.0
bbcode_enabled = true

[node name="Buttontest1" type="Button" parent="."]
offset_left = -3.0
offset_top = 163.0
offset_right = 170.0
offset_bottom = 196.0
script = ExtResource("3_v0osr")

[node name="Buttontest2" type="Button" parent="."]
offset_left = -3.0
offset_top = 210.0
offset_right = 170.0
offset_bottom = 242.0
script = ExtResource("4_aeu05")

[connection signal="pressed" from="Buttontest1" to="Buttontest1" method="_on_pressed"]
[connection signal="pressed" from="Buttontest2" to="Buttontest2" method="_on_pressed"]
